# BsPatch

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  sign.jks
app/src/androidTest/java/com/pgaofeng/basemvp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/pgaofeng/basemvp/main/: MainActivity.java  MainContract.java  MainModel.java  MainPresenter.java
app/src/main/java/com/pgaofeng/basemvp/network/: RetrofitClient.java  RxManager.java
app/src/main/java/com/pgaofeng/basemvp/service/: MainService.java
app/src/main/java/com/study/bspatch/main/: MainActivity.java  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/pgaofeng/basemvp/: ExampleUnitTest.java
app/src/test/java/com/study/basemvp/: ExampleUnitTest.java
bspatch/: build.gradle
bspatch/src/androidTest/java/com/study/bspatch/: ExampleInstrumentedTest.kt
bspatch/src/main/: AndroidManifest.xml
bspatch/src/main/cpp/: CMakeLists.txt  bspatch.c  bspatch_merge.cpp
bspatch/src/main/java/com/study/bspatch/: NativeLib.kt  PatchUtils.kt
bspatch/src/test/java/com/study/bspatch/: ExampleUnitTest.kt
common/: build.gradle
common/src/androidTest/java/com/pgaofeng/common/: ExampleInstrumentedTest.java
common/src/main/: AndroidManifest.xml
common/src/main/java/com/pgaofeng/common/base/: BaseActivity.java  BaseFragment.java  BaseModel.java  (+1 more)
common/src/test/java/com/pgaofeng/common/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+16 files in other folders)
